# vcpkg-tests

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
src/: Entry.cpp
